# head_first_design_patterns

./: LICENSE  README.md
chapter10_state_pattern/: CMakeLists.txt  README.md
chapter10_state_pattern/include/chapter10_state_pattern/: GumballMachine.hpp  HasQuarterState.hpp  NoQuarterState.hpp  SoldOutState.hpp  SoldState.hpp  State.hpp  WinnerState.hpp
chapter10_state_pattern/src/: GumballMachineTestDrive.cpp
chapter10_state_pattern/src/chapter10_state_pattern/: GumballMachine.cpp  HasQuarterState.cpp  NoQuarterState.cpp  SoldOutState.cpp  SoldState.cpp  WinnerState.cpp
chapter11_proxy_pattern/: CMakeLists.txt  README.md
chapter11_proxy_pattern/include/chapter11_proxy_pattern/: Zoo.hpp  (+5 more)
chapter11_proxy_pattern/src/: main.cpp
chapter12_compound_patterns/: CMakeLists.txt  README.md
chapter12_compound_patterns/include/chapter12_compound_patterns/: DuckCall.hpp  DuckSimulator.hpp  Flock.hpp  Goose.hpp  GooseAdapter.hpp  MallardDuck.hpp  QuackCounter.hpp  QuackableInterface.hpp  RedheadDuck.hpp  RubberDuck.hpp
chapter12_compound_patterns/include/chapter12_compound_patterns/duck_factory/: AbstractDuckFactory.hpp  CountingDuckFactory.hpp  DuckFactory.hpp
chapter12_compound_patterns/src/: main.cpp
chapter12_compound_patterns/src/chapter12_compound_patterns/: DuckCall.cpp  DuckSimulator.cpp  Flock.cpp  Goose.cpp  GooseAdapter.cpp  MallardDuck.cpp  QuackCounter.cpp  RedheadDuck.cpp  RubberDuck.cpp
chapter12_compound_patterns/src/chapter12_compound_patterns/duck_factory/: CountingDuckFactory.cpp  DuckFactory.cpp
chapter13_better_living_with_patterns/: README.md
chapter2_observer_pattern/: CMakeLists.txt  README.md
chapter2_observer_pattern/include/chapter2_observer_pattern/: CurrentConditionDisplay.hpp  DisplayElement.hpp  Observer.hpp  Subject.hpp  WeatherData.hpp
chapter2_observer_pattern/src/: main.cpp
chapter2_observer_pattern/src/chapter2_observer_pattern/: CurrentConditionDisplay.cpp  WeatherData.cpp
(+5 files in other folders)
